Create and Style top navBar

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <!--Link Google Fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Library</title>
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="navBar">
+            <p>Library</p>
+            <div class="navButtons">
+                <button class="navButton">New</button>
+                <button class="navButton">Delete</button>
+                <button class="navButton">Clear</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
