--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </table>
         </div>
         <div class="footer">
-            <button class="footerButton"><a href="https://github.com/DylanGresham" target="_blank">GitHub</a></button>
+            <button class="footerButton"><a href="https://github.com/Dylan-Gresham" target="_blank">GitHub</a></button>
         </div>
         <div id="bottom" style=" grid-row: -1; z-index: -100;"></div>
     </div>
