--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="top" style="grid-row: 1; z-index: -100;"></div>
+        <div id="top"></div>
         <div class="navBar">
             <p>Library</p>
             <button class="scrollButton" onclick="document.getElementById('top').scrollIntoView();">Scroll to Top</button>
@@ -45,7 +45,7 @@
         <div class="footer">
             <button class="footerButton"><a href="https://github.com/Dylan-Gresham" target="_blank">GitHub</a></button>
         </div>
-        <div id="bottom" style=" grid-row: -1; z-index: -100;"></div>
+        <div id="bottom"></div>
     </div>
 </body>
 </html>
