Link Google icons and Favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./styles.css">
     <!--Link Google Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <!--Link Google Icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <link rel="icon" href="./images/book-icon.png">
     <title>Library</title>
     <script src="./script.js" defer></script>
 </head>
