Add & Style library icon to navBar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="container">
         <div id="top"></div>
         <div class="navBar">
-            <p>Library</p>
+            <div class="libraryGrouping">
+                <span class="material-symbols-outlined">book</span>
+                <p>Library</p>
+            </div>
             <button class="scrollButton" onclick="document.getElementById('top').scrollIntoView();">Scroll to Top</button>
             <button class="scrollButton" onclick="document.getElementById('bottom').scrollIntoView()">Scroll to Bottom</button>
             <div class="navButtons">
