Add types to all buttons

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <span class="material-symbols-outlined">book</span>
                 <p>Library</p>
             </div>
-            <button class="scrollButton" onclick="document.getElementById('top').scrollIntoView();">Scroll to Top</button>
-            <button class="scrollButton" onclick="document.getElementById('bottom').scrollIntoView()">Scroll to Bottom</button>
+            <button type="button" class="scrollButton" onclick="document.getElementById('top').scrollIntoView();">Scroll to Top</button>
+            <button type="button" class="scrollButton" onclick="document.getElementById('bottom').scrollIntoView()">Scroll to Bottom</button>
             <div class="navButtons">
-                <button class="navButton">New</button>
-                <button class="navButton">Delete</button>
-                <button class="navButton">Clear</button>
+                <button type="button" class="navButton">New</button>
+                <button type="button" class="navButton">Delete</button>
+                <button type="button" class="navButton">Clear</button>
             </div>
         </div>
         <div class="sidebar left">
@@ -49,7 +49,7 @@
             </table>
         </div>
         <div class="footer">
-            <button class="footerButton"><a href="https://github.com/Dylan-Gresham" target="_blank">GitHub</a></button>
+            <button type="button" class="footerButton"><a href="https://github.com/Dylan-Gresham" target="_blank">GitHub</a></button>
         </div>
         <div id="bottom"></div>
     </div>
