Fix book deletion

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         </div>
         <div class="booksContainer">
-            <table class="booksTable">
+            <table class="booksTable" id="table">
                 <thead>
                     <tr>
                         <th>Title</th>
